imagen colocada e posicionada na area postagem

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div id="area-cabecalho">
+
         <div id="area-logo">
             <h1>Tec<span class="branco">Blog</span></h1>
         </div>
@@ -21,6 +22,35 @@
             <a href="informatica.html">Informática</a>
             <a href="eletronicos.html">Eletrônicos</a>
         </div>
+
+    </div>
+
+
+    <div id="area-principal">
+
+        <div id="area-postagens">
+            <!-- ABERTURA POSTAGEM -->
+            <div class="postagem">
+                <h2>Titulo da postagem 1</h2>
+                <span>postado 02 junho 2020</span>
+                <img width="620px" src="img/imagem1.jpg" alt="">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                    survived not only five centuries.
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+            <!-- // FECHAMENTO POSTAGEM -->
+
+        </div>
+        <div id="area-lateral">
+            Lateral
+        </div>
+
+        <div id="rodape">
+            <i>Todos os direitos reservados.</i>
+        </div>
+
     </div>
 
 </body>
