--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div id="area-principal">
 
         <div id="area-postagens">
-            <!-- ABERTURA POSTAGEM -->
+            <!-- ABERTURA POSTAGEM 1 -->
             <div class="postagem">
-                <h2>Titulo da postagem 1</h2>
-                <span>postado 02 junho 2020</span>
+                <h2>Tecnologia em foco</h2>
+                <span class="data-postagem">postado 02 junho 2020</span>
                 <img width="620px" src="img/imagem1.jpg" alt="">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
@@ -41,10 +41,53 @@
                 <a href="">Leia mais</a>
             </div>
             <!-- // FECHAMENTO POSTAGEM -->
+            <!-- ABERTURA POSTAGEM 2-->
+            <div class="postagem">
+                <h2>Aprenda a programar hoje</h2>
+                <span class="data-postagem">postado 25 junho 2020</span>
+                <img width="620px" src="img/imagem2.jpg" alt="">
+                <p>
+                    Dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+                    centuries.
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+            <!-- // FECHAMENTO POSTAGEM -->
 
         </div>
+
         <div id="area-lateral">
-            Lateral
+
+            <div class="conteudo-lateral">
+                <h3>Postagens recentes</h3>
+
+                <div class="postagem-lateral">
+                    <p>It was popularised in the 1960s with the release.</p>
+                    <a href="">Leia mais</a>
+                </div>
+
+                <div class="postagem-lateral">
+                    <p>Ipsum has been the industry's standard dummy text ever.</p>
+                    <a href="">Leia mais</a>
+                </div>
+
+                <div class="postagem-lateral" style="border-bottom: none;">
+                    <p>With the release,was popularised survived not only five centuries.</p>
+                    <a href="">Leia mais</a>
+                </div>
+
+            </div>
+
+            <div class="conteudo-lateral">
+                <h3>Categorias</h3>
+
+                <a href="">Jogos</a><br>
+                <a href="">Celulares</a><br>
+                <a href="">Informática</a><br>
+                <a href="">Eletrônicos</a><br>
+
+            </div>
+
         </div>
 
         <div id="rodape">
